add the delete todo funcionality

--- a/todoList/src/app/components/main-list/item-list/item-list.component.html
+++ b/todoList/src/app/components/main-list/item-list/item-list.component.html
@@ -1,6 +1,6 @@
 
 
-<a href="#" class="list-group-item">{{input}}</a>
+<a href="#" class="list-group-item">{{input}} <span class="glyphicon glyphicon-remove"  (click)="onDelete()"></span></a>
 
 
 <!-- I could add the class active to make it apeear blue and looks
