--- a/todoList/src/app/components/main-list/main-list.component.html
+++ b/todoList/src/app/components/main-list/main-list.component.html
@@ -1,3 +1,3 @@
 <div class="list-group">
-        <app-item-list *ngFor = "let item of receivedGroup" [input]="item"></app-item-list>
+        <app-item-list *ngFor = "let item of receivedGroup" [input]="item" (delete)="onDeleteItem(item)"></app-item-list>
 </div>
