--- a/todoList/src/app/components/main-list/item-list/item-list.component.scss
+++ b/todoList/src/app/components/main-list/item-list/item-list.component.scss
@@ -1,3 +1,15 @@
-.glyphicon {
+.glyphicon-ok {
     float: right;
+    color: lightgreen;
+    padding-right: 10px;
 }
+
+.glyphicon-remove {
+    float: right;
+    color: deeppink;
+}
+
+.isDone {
+    text-decoration: line-through;
+}
+
