added the general css layout

--- a/todoList/src/app/components/cockpit/cockpit.component.html
+++ b/todoList/src/app/components/cockpit/cockpit.component.html
@@ -1,8 +1,10 @@
+
 <div class="input-group">
-    <input [(ngModel)]="inputData" type="text" class="form-control" aria-label="...">
+    <input [(ngModel)]="inputData" type="text" class="form-control" aria-label="..." placeholder="Write a To-Do">
         <div class="input-group-btn">
             <button (click)="onClick(inputData)" class="btn btn-primary">Add</button>
         </div>
 </div>
+
 
     
