--- a/todoList/src/app/components/main-list/item-list/item-list.component.scss
+++ b/todoList/src/app/components/main-list/item-list/item-list.component.scss
@@ -1,6 +1,6 @@
 .glyphicon-ok {
     float: right;
-    color: lightgreen;
+    
     padding-right: 10px;
 }
 
@@ -11,5 +11,9 @@
 
 .isDone {
     text-decoration: line-through;
+}
+
+.iconCheck {
+    color: lightgreen;
 }
 
