--- a/todoList/src/app/components/main-list/item-list/item-list.component.html
+++ b/todoList/src/app/components/main-list/item-list/item-list.component.html
@@ -5,9 +5,11 @@ class="list-group-item"
 [class.isDone] = "isClick"
 > {{input}} 
 <span class="glyphicon glyphicon-remove"  
+      
         (click)="onDelete()">
 </span> 
 <span class="glyphicon glyphicon-ok" 
+        [class.iconCheck] = "isClick"
         (click)="onDone()" >
 </span>
 </li>
