--- a/todoList/src/app/pages/home-page/home-page.component.html
+++ b/todoList/src/app/pages/home-page/home-page.component.html
@@ -1,18 +1,23 @@
-<div class="row">
-    <div class="col-md-12">
-        <div class="jumbotron">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="container">
-                    <app-cockpit (inputTyped)="dataInputTyped($event)"></app-cockpit>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron">
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                        <h1>To-Do App</h1>
+                        <div class="container">
+                                <app-cockpit (inputTyped)="dataInputTyped($event)"></app-cockpit>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-6">
-            <app-main-list [receivedGroup]= "listGroup" (item)="onFinalDelete($event)" (itemDone)="onItemDone($event)"></app-main-list>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+                <app-main-list [receivedGroup]= "listGroup" (item)="onFinalDelete($event)" (itemDone)="onItemDone($event)"></app-main-list>
+        </div>
     </div>
 </div>
