--- a/todoList/src/app/pages/home-page/home-page.component.html
+++ b/todoList/src/app/pages/home-page/home-page.component.html
@@ -4,7 +4,7 @@
             <div class="jumbotron">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
-                        <h1>To-Do App</h1>
+                        <h1>{{ title }}</h1>
                         <div class="container">
                                 <app-cockpit (inputTyped)="dataInputTyped($event)"></app-cockpit>
                         </div>
