--- a/todoList/src/app/components/main-list/item-list/item-list.component.html
+++ b/todoList/src/app/components/main-list/item-list/item-list.component.html
@@ -1,17 +1,16 @@
 
 
 <li href="#" 
-class="list-group-item" 
-[class.isDone] = "isClick"
-> {{input}} 
-<span class="glyphicon glyphicon-remove"  
-      
+        class="list-group-item" 
+        [class.isDone] = "isClick"
+> {{input}} <span 
+        class="glyphicon glyphicon-remove"  
         (click)="onDelete()">
-</span> 
-<span class="glyphicon glyphicon-ok" 
+        </span> 
+        <span class="glyphicon glyphicon-ok" 
         [class.iconCheck] = "isClick"
         (click)="onDone()" >
-</span>
+        </span>
 </li>
 
 
