--- a/todoList/src/app/components/main-list/main-list.component.html
+++ b/todoList/src/app/components/main-list/main-list.component.html
@@ -1,3 +1,8 @@
 <div class="list-group">
-        <app-item-list *ngFor = "let item of receivedGroup" [input]="item" (delete)="onDeleteItem(item)" (done)="isClick = $event"></app-item-list>
+        <app-item-list 
+        *ngFor = "let item of receivedGroup" 
+        [input]="item" 
+        (delete)="onDeleteItem(item)" 
+        (done)="isClick = $event">
+        </app-item-list>
 </div>
