--- a/todoList/src/app/pages/home-page/home-page.component.html
+++ b/todoList/src/app/pages/home-page/home-page.component.html
@@ -17,7 +17,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-                <app-main-list [receivedGroup]= "listGroup" (item)="onFinalDelete($event)" (itemDone)="onItemDone($event)"></app-main-list>
+                <app-main-list 
+                [receivedGroup]= "listGroup" 
+                (item)="onFinalDelete($event)" 
+                (itemDone)="onItemDone($event)">
+                </app-main-list>
         </div>
     </div>
 </div>
