add ng-container and ng-content to cockpit and initiate to modified the remove button

--- a/todoList/src/app/components/cockpit/cockpit.component.html
+++ b/todoList/src/app/components/cockpit/cockpit.component.html
@@ -14,7 +14,9 @@
                 <button 
                 (click)="onClick(inputData)" 
                 class="btn btn-primary" 
-                [disabled]= "!inputObject.valid">Add</button>
+                [disabled]= "!inputObject.valid">
+                <ng-content select=".add"></ng-content>
+                </button>
             </div>
     </div>
 </form>
