add a component for the remove button

--- a/todoList/src/app/components/main-list/item-list/item-list.component.html
+++ b/todoList/src/app/components/main-list/item-list/item-list.component.html
@@ -1,6 +1,6 @@
 <li href="#"  class="list-group-item" [class.isDone] = "isClick"
 > {{input}} 
-<app-remove></app-remove>
+<app-remove (delete)=onDelete()></app-remove>
 <span class="glyphicon glyphicon-ok" [class.iconCheck] = "isClick" (click)="onDone()" ></span>
 </li>
 
